--- a/index.html
+++ b/index.html
@@ -14,28 +14,36 @@ body {
     margin: 50px;
 }
 .container div {
-    padding: 10px;
+    padding: 6px 10px;
     background: rgba(150, 150, 150, 0.1);
     border-radius: 5px;
     border: 1px solid #777;
-    margin-bottom: 5px;
+    margin: 4px 0;
 }
 .container > div {
-    padding: 0;
     background: none;
-    border: none;
 }
 .container div span.deadline {
+    font-size: 90%;
     display: inline-block;
     margin-left: 20px;
 }
 .container div i.add-item {
     display: block;
-    text-align: right;
-    margin-bottom: -10px;
+    margin: 3px -10px -6px -10px;
+    height: 14px;
+    border-top: 1px solid #777;
+    border-radius: 0 0 4px 4px;
+    padding-left: 10px;
+    cursor: pointer;
+}
+.container div i.add-item:hover {
+    background: #777;
+    color: white;
 }
 .container div i.add-item span {
-    cursor: pointer;
+    vertical-align: top;
+    line-height: 14px;
 }
 </style>
 <body>
